Fix inverse govspeak print styles
Previously, the text was not visible when printing due to the white text colour on a white background.

--- a/app/assets/stylesheets/govuk_publishing_components/components/govspeak/_typography.scss
+++ b/app/assets/stylesheets/govuk_publishing_components/components/govspeak/_typography.scss
@@ -106,4 +106,8 @@
     @include govuk-link-common;
     @include govuk-link-style-inverse;
   }
+
+  @include govuk-media-query($media-type: print) {
+    color: $govuk-print-text-colour;
+  }
 }
